package org.example.app.exceptions;


public class OptionException extends Exception {

    public OptionException(String msg) {
        super(msg);
    }
}
