package org.example.app.view;


public class ContactReadView {

    public void getOutput(String output) {
        System.out.println(output);
    }
}
